--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,6 +23,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style media="screen">
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
+      body{
+        font-family: 'Roboto';
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
